src/test/ui/malformed/malformed-special-attrs.stderr
error: malformed `cfg_attr` attribute input
  --> $DIR/malformed-special-attrs.rs:1:1
   |
LL | #[cfg_attr]
   | ^^^^^^^^^^^ help: missing condition and attribute: `#[cfg_attr(condition, attribute, other_attribute, ...)]`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg_attr-attribute>

error: malformed `cfg_attr` attribute input
  --> $DIR/malformed-special-attrs.rs:1:1
   |
LL | #[cfg_attr]
   | ^^^^^^^^^^^ help: missing condition and attribute: `#[cfg_attr(condition, attribute, other_attribute, ...)]`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg_attr-attribute>

error: malformed `cfg_attr` attribute input
  --> $DIR/malformed-special-attrs.rs:5:1
   |
LL | #[cfg_attr = ""]
   | ^^^^^^^^^^^^^^^^ help: missing condition and attribute: `#[cfg_attr(condition, attribute, other_attribute, ...)]`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg_attr-attribute>

error: malformed `cfg_attr` attribute input
  --> $DIR/malformed-special-attrs.rs:5:1
   |
LL | #[cfg_attr = ""]
   | ^^^^^^^^^^^^^^^^ help: missing condition and attribute: `#[cfg_attr(condition, attribute, other_attribute, ...)]`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg_attr-attribute>

error: malformed `derive` attribute input
  --> $DIR/malformed-special-attrs.rs:9:1
   |
LL | #[derive]
   | ^^^^^^^^^ help: missing traits to be derived: `#[derive(Trait1, Trait2, ...)]`

error: malformed `derive` attribute input
  --> $DIR/malformed-special-attrs.rs:12:1
   |
LL | #[derive = ""]
   | ^^^^^^^^^^^^^^ help: missing traits to be derived: `#[derive(Trait1, Trait2, ...)]`

error: aborting due to 6 previous errors

